--- a/home/src/index.html
+++ b/home/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Công ty truyền thông hàng đầu - VietstarMax</title>
+  <title>Công ty truyền thông hàng đầu - Thiên An</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="https://vietstarmax.vn/images/favicon1.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
